Few dark mode fixes and top bar improvements (#1137)
* fix: Fix progress bar coloring and remove % on indicator

Fixes #1129

* fix: Improve header, action buttons and progress bar spacing

* fix: Fix caret color on sb-mini-editor

--- a/web/styles/colors.scss
+++ b/web/styles/colors.scss
@@ -73,8 +73,11 @@
 }
 
 .sb-actions button {
+  width: 28px;
+  height: 28px;
   border: 0;
-  margin: 3px;
+  margin: 2px;
+  margin-top: 6px;
   padding: 5px;
   background-color: var(--action-button-background-color);
   color: var(--action-button-color);
